==> elFallino/ILI9341_ESP32/src/ILI9341_ESP32.cpp <==
#include "ILI9341_ESP32.h"
#include "SPI.h"
#include "Arduino.h"
#include <pgmspace.h>
#include "gfxfont.h"
#include "glcdfont.c"	//default fonts
  #define min(a,b) (((a) < (b)) ? (a) : (b))
  #define _swap_int16_t(a, b) { uint16_t t = a; a = b; b = t; }
 #define pgm_read_pointer(addr) ((void *)pgm_read_dword(addr))
 #define pgm_read_pointer(addr) ((void *)pgm_read_word(addr))
#define SPI_BEGIN SPI.beginTransaction(SPISettings(_busFrequency, MSBFIRST, SPI_MODE0));
#define SPI_END

void ILI9341_ESP32::_writeCommand(uint8_t command) {
  digitalWrite(pin_dc, LOW);
  digitalWrite(pin_clk, LOW);
  SPI.write(command);

}

void ILI9341_ESP32::_writeData(uint8_t * data, size_t length){

  digitalWrite(pin_dc, HIGH);
  if(length==1){
    SPI.write(data[0]);
  } else if(length==2){
    SPI.write16((uint16_t)data[0]<<8 | data[1]);
  } else if(length==3){
    SPI.write16((uint16_t)data[0]<<8 | data[1]);
    SPI.write(data[3]);
  } else if(length==4){
    SPI.write32((uint32_t)data[0]<<24 | (uint32_t)data[1]<<16 | (uint32_t)data[2]<<8 | data[3]);
  } else {
    SPI.writeBytes(data, length);
  }
}

void ILI9341_ESP32::_writeData(uint8_t data){
  digitalWrite(pin_dc, HIGH);
  SPI.write(data);
}

void ILI9341_ESP32::begin(){
  if (pin_reset > 0) {
    pinMode(pin_reset, OUTPUT);
    digitalWrite(pin_reset, LOW);
  }

  pinMode(pin_dc, OUTPUT);
  //pinMode(pin_cs, OUTPUT);

  SPI.begin(pin_clk, pin_miso, pin_mosi, pin_cs);  //sck, miso, mosi, ss
  SPI.setHwCs(true);
  // toggle RST low to reset
  if (pin_reset > 0) {
    digitalWrite(pin_reset, HIGH);
    delay(5);
    digitalWrite(pin_reset, LOW);
    delay(20);
    digitalWrite(pin_reset, HIGH);
    delay(150);
  }


  SPI_BEGIN

  _writeCommand(0xEF);
  _writeData(0x03);
  _writeData(0x80);
  _writeData(0x02);

  _writeCommand(0xCF);                                                           //
  _writeData(0x00);
  _writeData(0XC1);
  _writeData(0X30);

  _writeCommand(0xED);                                                           //
  _writeData(0x64);
  _writeData(0x03);
  _writeData(0X12);
  _writeData(0X81);

  _writeCommand(0xE8);                                                           //
  _writeData(0x85);
  _writeData(0x00);
  _writeData(0x78);

  _writeCommand(0xCB);                                                           //
  _writeData(0x39);
  _writeData(0x2C);
  _writeData(0x00);
  _writeData(0x34);
  _writeData(0x02);

  _writeCommand(0xF7);                                                           //
  _writeData(0x20);

  _writeCommand(0xEA);                                                           //
  _writeData(0x00);
  _writeData(0x00);

  _writeCommand(ILI9341_PWCTR1);    //Power control
  _writeData(0x23);   //VRH[5:0]

  _writeCommand(ILI9341_PWCTR2);    //Power control
  _writeData(0x10);   //SAP[2:0];BT[3:0]

  _writeCommand(ILI9341_VMCTR1);    //VCM control
  _writeData(0x3e); //
  _writeData(0x28);

  _writeCommand(ILI9341_VMCTR2);    //VCM control2
  _writeData(0x86);  //--

  _writeCommand(ILI9341_MADCTL);    // Memory Access Control
  _writeData(0x58);//_writeData(0x48);                                            //Note: Set Bit 5 to enable line wrap when page end is reached. Used for very fast writing of Bitmaps

  _writeCommand(ILI9341_PIXFMT);     //Set pixel format
  _writeData(0x55);                  //0x55= 16 Bit Pixel

  _writeCommand(ILI9341_FRMCTR1);    //Frame Rate
  _writeData(0x00);
  _writeData(0x18);

  _writeCommand(ILI9341_DFUNCTR);    // Display Function Control
  _writeData(0x08);
  _writeData(0x82);
  _writeData(0x27);

  _writeCommand(0xF2);               // 3Gamma Function Disable
  _writeData(0x00);

  _writeCommand(ILI9341_GAMMASET);    //Gamma curve selected
  _writeData(0x01);

  _writeCommand(ILI9341_GMCTRP1);    //Set Gamma positive correction
  _writeData(0x0F);
  _writeData(0x31);
  _writeData(0x2B);
  _writeData(0x0C);
  _writeData(0x0E);
  _writeData(0x08);
  _writeData(0x4E);
  _writeData(0xF1);
  _writeData(0x37);
  _writeData(0x07);
  _writeData(0x10);
  _writeData(0x03);
  _writeData(0x0E);
  _writeData(0x09);
  _writeData(0x00);

  _writeCommand(ILI9341_GMCTRN1);    //Set Gamma negative correction
  _writeData(0x00);
  _writeData(0x0E);
  _writeData(0x14);
  _writeData(0x03);
  _writeData(0x11);
  _writeData(0x07);
  _writeData(0x31);
  _writeData(0xC1);
  _writeData(0x48);
  _writeData(0x08);
  _writeData(0x0F);
  _writeData(0x0C);
  _writeData(0x31);
  _writeData(0x36);
  _writeData(0x0F);

  _writeCommand(ILI9341_SLPOUT);    //Exit Sleep
  SPI_END
  delay(120);
  SPI_BEGIN
  _writeCommand(ILI9341_DISPON);    //Display on
  SPI_END
}

void ILI9341_ESP32::_setAddrWindow(uint16_t x0, uint16_t y0, uint16_t x1, uint16_t y1){

  _writeCommand(ILI9341_CASET); // Column addr set
   digitalWrite(pin_dc, HIGH);
  SPI.write32(x0 <<16 | x1);

  _writeCommand(ILI9341_PASET); // Row addr set
   digitalWrite(pin_dc, HIGH);
  SPI.write32(y0 <<16 | y1);
  _writeCommand(ILI9341_RAMWR); // write to RAM
}

void ILI9341_ESP32::begin(uint32_t busFrequency){
  _busFrequency = busFrequency;
  begin();
}

void ILI9341_ESP32::drawPixel(uint16_t x, uint16_t y, uint16_t color){
  if((x < 0) ||(x >= _width) || (y < 0) || (y >= _height)) return;
  SPI_BEGIN
  _setAddrWindow(x,y,x+1,y+1);
  digitalWrite(pin_dc, HIGH);
  SPI.write16(color);
  SPI_END
}

void ILI9341_ESP32::drawLine(uint16_t x1, uint16_t y1, uint16_t x2, uint16_t y2,  uint16_t color){
    _fillBuff(color);
    uint16_t steep = abs(y2-y1) > abs(x2 - x1);

    if (steep) {
      _swap_int16_t(x1, y1);
      _swap_int16_t(x2, y2);
    }

    if (x1 > x2) {
      _swap_int16_t(x1, x2);
      _swap_int16_t(y1, y2);
    }

    int16_t dx, dy;
    dx = x2 - x1;
    dy = abs(y2 - y1);

    int16_t err = dx / 2;
    int16_t ystep;

    if (y1 < y2) {
      ystep = 1;
    } else {
      ystep = -1;
    }

    uint16_t pxlen = 0;

    SPI_BEGIN
    for (; x1<=x2; x1++) {
      pxlen++;
      err -= dy;
      if (err < 0) {
        if(steep){
          _setAddrWindow(y1, x1-(pxlen-1), y1, x1);
        } else {
          _setAddrWindow(x1-(pxlen-1), y1, x1, y1);
        }
        _drawPixels(pxlen);
        y1 += ystep;
        err += dx;
        pxlen=0;
      }
    } //for

    if(pxlen>0){    //draw resst if any or when drawing a horizontal or vertical line
      if(steep){
        _setAddrWindow(y1, x1-(pxlen-1), y1, x1);
      } else {
        _setAddrWindow(x1-(pxlen-1), y1, x1, y1);
      }
      _drawPixels(pxlen);
    }
    SPI_END
  }

void ILI9341_ESP32::drawRect(uint16_t x, uint16_t y, uint16_t w, uint16_t h, uint16_t color){
    _fillBuff(color);
    SPI_BEGIN

    //draw top line
    _setAddrWindow(x,y,x+w,y);
    _drawPixels(w);

    //draw bottom line
    _setAddrWindow(x,y+h+1,x+w,y+h-1);
    _drawPixels(w);

    //draw right line
    _setAddrWindow(x+w-1,y+1,x+w-1,y+h-2);
    _drawPixels(h);

    //draw left line
    _setAddrWindow(x,y+1,x,y+h-2);
    _drawPixels(h);

    SPI_END
  }

void ILI9341_ESP32::fillRect(uint16_t x, uint16_t y, uint16_t w, uint16_t h, uint16_t color){
  _fillBuff(color);
  SPI_BEGIN
  _setAddrWindow(x,y,x+w-1,y+h-1);
  _drawPixels(w*h);
  SPI_END
}

void ILI9341_ESP32::_drawCircleHelper( int16_t x0, int16_t y0,
 int16_t r, uint8_t cornername, uint16_t color) {
  //_fillbuff(color);     //maybe we could skip that since previous method that uses that one already filled buffer

  int16_t f     = 1 - r;
  int16_t ddF_x = 1;
  int16_t ddF_y = -2 * r;
  int16_t x     = 0;
  int16_t y     = r;

  SPI_BEGIN
  while (x<y) {
    if (f >= 0) {
      y--;
      ddF_y += 2;
      f     += ddF_y;
    }
    x++;
    ddF_x += 2;
    f     += ddF_x;
    if (cornername & 0x4) {
      _setAddrWindow(x0 + x, y0 + y, x0 + x, y0 + y);
      _drawPixels(1);
      _setAddrWindow(x0 + y, y0 + x, x0 + y, y0 + x);
      _drawPixels(1);
    }
    if (cornername & 0x2) {
      _setAddrWindow(x0 + x, y0 - y, x0 + x, y0 - y);
      _drawPixels(1);
      _setAddrWindow(x0 + y, y0 - x, x0 + y, y0 - x);
      _drawPixels(1);
    }
    if (cornername & 0x8) {
      _setAddrWindow(x0 - y, y0 + x, x0 - y, y0 + x);
      _drawPixels(1);
      _setAddrWindow(x0 - x, y0 + y, x0 - x, y0 + y);
      _drawPixels(1);
    }
    if (cornername & 0x1) {
      _setAddrWindow(x0 - y, y0 - x, x0 - y, y0 - x);
      _drawPixels(1);
      _setAddrWindow(x0 - x, y0 - y, x0 - x, y0 - y);
      _drawPixels(1);
    }
  }
  SPI_END
}

void ILI9341_ESP32::fillCircle(int16_t x0, int16_t y0, int16_t r, uint16_t color){
  fillRect(x0, y0-r, 1 ,2*r+1, color);
  _fillCircleHelper(x0, y0, r, 3, 0, color);
}

void ILI9341_ESP32::_fillCircleHelper(int16_t x0, int16_t y0, int16_t r,
 uint8_t cornername, int16_t delta, uint16_t color) {
  //_fillbuff(color);     //maybe we could skip that since previous method that uses that one already filled buffer
  int16_t f     = 1 - r;
  int16_t ddF_x = 1;
  int16_t ddF_y = -2 * r;
  int16_t x     = 0;
  int16_t y     = r;

  SPI_BEGIN
  while (x<y) {
    if (f >= 0) {
      y--;
      ddF_y += 2;
      f     += ddF_y;
    }
    x++;
    ddF_x += 2;
    f     += ddF_x;

    if (cornername & 0x1) {       //right half of a circle
      _setAddrWindow(x0+x, y0-y, x0+x,  (y0-y) + (2*y+1+delta));
      _drawPixels(2*y+1+delta);
      _setAddrWindow(x0+y, y0-x, x0+y, (y0-x) + (2*x+1+delta));
      _drawPixels(2*y+1+delta);
    }
    if (cornername & 0x2) {       //left half of a circle
      _setAddrWindow(x0-x, y0-y, x0-x,  (y0-y) + (2*y+1+delta));
      _drawPixels(2*y+1+delta);
      _setAddrWindow(x0-y, y0-x, x0-y, (y0-x) + (2*x+1+delta));
      _drawPixels(2*y+1+delta);
    }
  }
  SPI_END
}

void ILI9341_ESP32::drawRoundRect(int16_t x, int16_t y, int16_t w, int16_t h, int16_t radius, uint16_t color){
  // smarter version
  drawFastHLine(x+radius  , y         , w-2*radius, color); // Top
  drawFastHLine(x+radius  , y+h-1     , w-2*radius, color); // Bottom
  drawFastVLine(x         , y+radius  , h-2*radius, color); // Left
  drawFastVLine(x+w-1     , y+radius  , h-2*radius, color); // Right
  // draw four corners
  _drawCircleHelper(x+radius    , y+radius    , radius, 1, color);
  _drawCircleHelper(x+w-radius-1, y+radius    , radius, 2, color);
  _drawCircleHelper(x+w-radius-1, y+h-radius-1, radius, 4, color);
  _drawCircleHelper(x+radius    , y+h-radius-1, radius, 8, color);
}

void ILI9341_ESP32::fillRoundRect(int16_t x, int16_t y, int16_t w, int16_t h, int16_t radius, uint16_t color){
  // smarter version
  fillRect(x+radius, y, w-2*radius, h, color);
  // draw four corners
  _fillCircleHelper(x+w-radius-1, y+radius, radius, 1, h-2*radius-1, color);
  _fillCircleHelper(x+radius    , y+radius, radius, 2, h-2*radius-1, color);
}

void ILI9341_ESP32::setRotation(uint8_t m) {
  SPI_BEGIN
  _writeCommand(ILI9341_MADCTL);
  _rotation = m % 4; // can't be higher than 3
  switch (_rotation) {
   case 0:
     _writeData(MADCTL_MX | MADCTL_BGR);
     _width  = TFT_WIDTH;
     _height = TFT_HEIGHT;
     break;
   case 1:
     _writeData(MADCTL_MV | MADCTL_BGR);
     _width  = TFT_HEIGHT;
     _height = TFT_WIDTH;
     break;
  case 2:
    _writeData(MADCTL_MY | MADCTL_BGR);
     _width  = TFT_WIDTH;
     _height = TFT_HEIGHT;
    break;
   case 3:
     _writeData(MADCTL_MX | MADCTL_MY | MADCTL_MV | MADCTL_BGR);
     _width  = TFT_HEIGHT;
     _height = TFT_WIDTH;
     break;
  }
  SPI_END
}

void ILI9341_ESP32::invertDisplay(bool invert) {
  SPI_BEGIN
  _writeCommand(invert ? ILI9341_INVON : ILI9341_INVOFF);
  SPI_END
}

void ILI9341_ESP32::drawChar(int16_t x, int16_t y, unsigned char c,
 uint16_t color, uint16_t bg, uint8_t size) {
   SPI_BEGIN
   _drawChar(x,y,c,color, bg, size);
   SPI_END
 }

void ILI9341_ESP32::_drawChar(int16_t x, int16_t y, unsigned char c, uint16_t color, uint16_t bgcolor, uint8_t size){
  if(!gfxFont && color!=bgcolor) {
    fillRect(x,y-1,6*size,8*size,bgcolor);    //draw a BG behind text if wished. Only suitable for non-GFX fonts
  }

    _fillBuff(color);

    if(!gfxFont) { // 'Classic' built-in font

      if((x >= _width)            || // Clip right
         (y >= _height)           || // Clip bottom
         ((x + 6 * size - 1) < 0) || // Clip left
         ((y + 8 * size - 1) < 0))   // Clip top
        return;

      if(!_cp437 && (c >= 176)) c++; // Handle 'classic' charset behavior
      uint32_t pxlen = 0; //count the pixels that can be drawn at once

      for(int8_t i=0; i<6; i++ ) {        //X part
        uint8_t line;
        if(i < 5) line = pgm_read_byte(font+(c*5)+i);
        else      line = 0x0;

        for(int8_t j=0; j<8; j++, line >>= 1) {   //Y part

          if(line & 0x1) {
            if(pxlen==0)                                                              //change from low to high
              _setAddrWindow(x+(i*size), y+(j*size), x+(i*size)+size-1, y+(j*size)+((7-j)*size));                                 //set new adress window
            pxlen+=size*size;
          } else {
            if(pxlen>0) {                                                             //change from high to low
              _drawPixels(pxlen);                                                      //draw pixels
              pxlen=0;
            }
          }
        }
      }

    } else { // Custom font

      // Character is assumed previously filtered by write() to eliminate
      // newlines, returns, non-printable characters, etc.  Calling drawChar()
      // directly with 'bad' characters of font may cause mayhem!

      c -= pgm_read_byte(&gfxFont->first);
      GFXglyph *glyph  = &(((GFXglyph *)pgm_read_pointer(&gfxFont->glyph))[c]);
      uint8_t  *bitmap = (uint8_t *)pgm_read_pointer(&gfxFont->bitmap);

      uint16_t bo = pgm_read_word(&glyph->bitmapOffset);
      uint8_t  w  = pgm_read_byte(&glyph->width),
               h  = pgm_read_byte(&glyph->height);
      int16_t xo = (int8_t)pgm_read_byte(&glyph->xOffset),
              yo = (int8_t)pgm_read_byte(&glyph->yOffset);
      uint8_t  xx, yy, bits, bit = 0;


      // Todo: Add character clipping here

      // NOTE: THERE IS NO 'BACKGROUND' COLOR OPTION ON CUSTOM FONTS.
      // THIS IS ON PURPOSE AND BY DESIGN.  The background color feature
      // has typically been used with the 'classic' font to overwrite old
      // screen contents with new data.  This ONLY works because the
      // characters are a uniform size; it's not a sensible thing to do with
      // proportionally-spaced fonts with glyphs of varying sizes (and that
      // may overlap).  To replace previously-drawn text when using a custom
      // font, use the getTextBounds() function to determine the smallest
      // rectangle encompassing a string, erase the area with fillRect(),
      // then draw new text.  This WILL infortunately 'blink' the text, but
      // is unavoidable.  Drawing 'background' pixels will NOT fix this,
      // only creates a new set of problems.
      for(yy=0; yy<h; yy++) {
        for(xx=0; xx<w; xx++) {
          if(!(bit++ & 7)) {
            bits = pgm_read_byte(&bitmap[bo++]);
          }
          if(bits & 0x80) {
            _setAddrWindow(x+(xo+xx)*size, y+(yo+yy)*size, (x+(xo+xx)*size)+size-1, (y+(yo+yy)*size)+size-1 );
            _drawPixels(size*size);
          }
          bits <<= 1;
        }//x
      }//y
    } // End classic vs custom font
}

uint8_t ILI9341_ESP32::readcommand8(uint8_t c, uint8_t index) {
   SPI_BEGIN
   digitalWrite(pin_dc, LOW); // command
   digitalWrite(pin_cs, LOW);
   SPI.write(0xD9);  // woo sekret command?
   digitalWrite(pin_dc, HIGH); // data
   SPI.write(0x10 + index);
   digitalWrite(pin_cs, HIGH);
   digitalWrite(pin_cs, HIGH);

   digitalWrite(pin_dc, LOW);
   digitalWrite(pin_clk, LOW);
   digitalWrite(pin_cs, LOW);
   SPI.write(c);

   digitalWrite(pin_dc, HIGH);
   uint8_t r = SPI.transfer(0x00);
   digitalWrite(pin_cs, HIGH);
   SPI_END
   return r;
}
